--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^24.9.2",
+    "@types/three": "^0.180.0",
     "typescript": "^5.9.3",
     "vite": "^7.1.12"
   },
   "dependencies": {
-    "lil-gui": "^0.21.0",
     "three": "^0.180.0"
   }
 }
