--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +16,7 @@
   "devDependencies": {
     "@types/node": "^24.9.2",
     "@types/three": "^0.180.0",
+    "gh-pages": "^6.1.1",
     "typescript": "^5.9.3",
     "vite": "^7.1.12"
   },
